WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72324
DFG put_by_id transition optimizations test the wrong structures
https://bugs.webkit.org/show_bug.cgi?id=72324
Summary
DFG put_by_id transition optimizations test the wrong structures
Filip Pizlo
Reported
2011-11-14 16:03:55 PST
Patch forthcoming
Attachments
the patch
(4.09 KB, patch)
2011-11-14 16:08 PST
,
Filip Pizlo
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-11-14 16:08:39 PST
Created
attachment 115053
[details]
the patch
Gavin Barraclough
Comment 2
2011-11-14 16:36:27 PST
Comment on
attachment 115053
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=115053&action=review
> Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp:1825 > + if (previousStructure->storedPrototype().isCell())
I would prefer if the 'isCell' check check was a !isNull() check for consistency.
Filip Pizlo
Comment 3
2011-11-14 17:04:29 PST
Landed in
http://trac.webkit.org/changeset/100219
Filip Pizlo
Comment 4
2011-11-14 17:06:18 PST
<
rdar://problem/10445229
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug