DFG put_by_id transition optimizations test the wrong structures https://bugs.webkit.org/show_bug.cgi?id=72324

Reviewed by Gavin Barraclough.

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::structureChainIsStillValid):
(JSC::DFG::ByteCodeParser::parseBlock):
* jit/JITPropertyAccess.cpp:
(JSC::JIT::privateCompilePutByIdTransition):



Canonical link: https://commits.webkit.org/88767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100219 268f45cc-cd09-0410-ab3c-d52691b4dbfc